--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
             width: 70%;
             height: 70%;
             border-radius: 50%;
-            background: radial-gradient(circle, rgba(0,255,0,0.8) 0%, rgba(0,255,0,0.2) 70%, rgba(0,255,0,0) 100%);
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.8) 30%, rgba(0, 255, 0, 0.3) 60%, rgba(0, 255, 0, 0) 100%);
+            box-shadow: 0 0 40px rgba(0, 255, 0, 0.8);
+            border: 3px dotted rgba(255, 255, 255, 0.9);
             animation: glow 2s infinite;
             z-index: 1;
         }
@@ -195,7 +197,7 @@
 
         @keyframes glow {
             0% {
-                opacity: 0.5;
+                opacity: 0.75;
                 transform: scale(1);
             }
             50% {
@@ -203,7 +205,7 @@
                 transform: scale(1.1);
             }
             100% {
-                opacity: 0.5;
+                opacity: 0.75;
                 transform: scale(1);
             }
         }
